--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
         <spring.version>5.1.5.RELEASE</spring.version>
         <opencsv.version>4.1</opencsv.version>
+        <lombok.version>1.18.6</lombok.version>
     </properties>
     <packaging>jar</packaging>
 
@@ -29,6 +30,11 @@
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>${opencsv.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
     <build>
