--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <opencsv.version>4.1</opencsv.version>
         <lombok.version>1.18.6</lombok.version>
         <junit-jupiter.version>5.3.2</junit-jupiter.version>
+        <spring-shell-starter.version>2.0.0.RELEASE</spring-shell-starter.version>
     </properties>
 
     <parent>
@@ -43,6 +44,11 @@
                     <artifactId>junit</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.shell</groupId>
+            <artifactId>spring-shell-starter</artifactId>
+            <version>${spring-shell-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
